# python-hatch-template

./: README.md  cookiecutter.json  pyproject.toml
tests/: test_dummy.py
{{cookiecutter.project_name}}/: README.md  pyproject.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __main__.py
{{cookiecutter.project_name}}/tests/: test_dummy.py
