[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
# See https://hatch.pypa.io for more details about that build system.

[project]
name = "{{cookiecutter.project_name}}"
dynamic = ['version']
description = """{{cookiecutter.project_description}}"""
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

[tool.hatch.version]
path = "src/{{cookiecutter.project_name}}/__about__.py"

[project.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.project_name}}.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ['src/{{cookiecutter.project_name}}']

[tool.hatch.build.targets.sdist]
packages = ['src/{{cookiecutter.project_name}}']
